Minor changes here and there.

--- a/FreeAIr/UI/ToolWindows/ChooseModelToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChooseModelToolWindowControl.xaml
@@ -37,6 +37,7 @@
                 SelectedItem="{Binding ChosenAgent}"
                 VerticalAlignment="Center"
                 VerticalContentAlignment="Center"
+                DisplayMemberPath="Name"
                 />
 
             <Button
