--- a/FreeAIr/UI/Windows/ActionConfigureWindow.xaml
+++ b/FreeAIr/UI/Windows/ActionConfigureWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="FreeAIr.UI.Windows.AgentConfigureWindow"
+    x:Class="FreeAIr.UI.Windows.ActionConfigureWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,12 +7,14 @@
     xmlns:local="clr-namespace:FreeAIr"
     xmlns:ui="clr-namespace:FreeAIr.UI"
     xmlns:et="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+    xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
     mc:Ignorable="d" 
     d:DesignHeight="700" d:DesignWidth="1000"
     Height="700" Width="1000"
     ui:VsTheme.UseVsTheme="True"
     ShowInTaskbar="False"
-    Title="FreeAIr Agent Configuration Window"
+    Title="FreeAIr Support Action Configuration Window"
+    Name="ActionConfigurationWindowName"
     Loaded="Window_Loaded"
     >
     <Grid>
@@ -45,8 +47,8 @@
                 Foreground="Green"
                 FontFamily="Cascadia Code"
                 VerticalAlignment="Center"
-                ToolTip="Add new agent"
-                Command="{Binding AddNewAgentCommand}"
+                ToolTip="Add new action"
+                Command="{Binding AddNewActionCommand}"
                 Style="{DynamicResource TextBlockLikeButtonStyle}"
                 />
             <Button
@@ -57,8 +59,8 @@
                 Foreground="Red"
                 FontFamily="Cascadia Code"
                 VerticalAlignment="Center"
-                ToolTip="Delete selected agent"
-                Command="{Binding DeleteAgentCommand}"
+                ToolTip="Delete selected action"
+                Command="{Binding DeleteActionCommand}"
                 Style="{DynamicResource TextBlockLikeButtonStyle}"
                 />
             <Button
@@ -85,9 +87,9 @@
 
             <ListView
                 Grid.Row="1"
-                ItemsSource="{Binding AvailableAgents}"
+                ItemsSource="{Binding AvailableActions}"
                 DisplayMemberPath="Name"
-                SelectedItem="{Binding SelectedAgent}"
+                SelectedItem="{Binding SelectedAction}"
                 />
             
         </Grid>
@@ -100,25 +102,24 @@
             HorizontalAlignment="Stretch"
             VerticalAlignment="Top"
             Margin="2"
-            Visibility="{Binding ShowAgentPanel}"
+            Visibility="{Binding ShowActionPanel}"
             >
             <Grid.RowDefinitions>
+                <!-- scopes -->
+                <RowDefinition Height="auto"/>
+
                 <!-- name -->
                 <RowDefinition Height="auto"/>
                 
-                <!-- endpoint -->
-                <RowDefinition Height="auto"/>
-                
-                <!-- token -->
+                <!-- agent name -->
                 <RowDefinition Height="auto"/>
 
-                <!-- chosen model -->
+                <!-- known moniker -->
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
 
-                <!-- context size -->
-                <RowDefinition Height="auto"/>
-
-                <!-- system prompt -->
+                <!-- prompt -->
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
@@ -129,8 +130,32 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <Label
+            <ItemsControl
                 Grid.Row="0"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                HorizontalAlignment="Stretch"
+                ItemsSource="{Binding ScopeList}"
+                Margin="2,2,2,5"
+                >
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox
+                            Content="{Binding ScopeName}"
+                            IsChecked="{Binding ScopeChecked}"
+                            Margin="5,2,5,2"
+                            />
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
+
+            <Label
+                Grid.Row="1"
                 Grid.Column="0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
@@ -138,27 +163,11 @@
                 />
 
             <TextBox
-                Grid.Row="0"
-                Grid.Column="1"
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Center"
-                Text="{Binding SelectedAgent.Name, UpdateSourceTrigger=PropertyChanged}"
-                />
-
-            <Label
-                Grid.Row="1"
-                Grid.Column="0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                Content="Endpoint:"
-                />
-
-            <TextBox
                 Grid.Row="1"
                 Grid.Column="1"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Center"
-                Text="{Binding SelectedAgent.Technical.Endpoint, UpdateSourceTrigger=PropertyChanged}"
+                Text="{Binding SelectedAction.Name, UpdateSourceTrigger=PropertyChanged}"
                 />
 
             <Label
@@ -166,7 +175,7 @@
                 Grid.Column="0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
-                Content="Token:"
+                Content="Agent name:"
                 />
 
             <TextBox
@@ -174,7 +183,7 @@
                 Grid.Column="1"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Center"
-                Text="{Binding SelectedAgent.Technical.Token, UpdateSourceTrigger=PropertyChanged}"
+                Text="{Binding SelectedAction.AgentName, UpdateSourceTrigger=PropertyChanged}"
                 />
 
             <Label
@@ -182,44 +191,47 @@
                 Grid.Column="0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
-                Content="Chosen model:"
+                Content="KnownMoniker:"
                 />
 
-            <TextBox
+            <ComboBox
                 Grid.Row="3"
                 Grid.Column="1"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Center"
-                Text="{Binding SelectedAgent.Technical.ChosenModel, UpdateSourceTrigger=PropertyChanged}"
-                />
+                ItemsSource="{Binding MonikerList}"
+                SelectedItem="{Binding SelectedMoniker}"
+                >
+                <ComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel />
+                    </ItemsPanelTemplate>
+                </ComboBox.ItemsPanel>
+            </ComboBox>
 
-            <Label
+            <Border
                 Grid.Row="4"
                 Grid.Column="0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                Content="Context size:"
-                x:Name="ContextSizeLabel"
-                />
-
-            <et:IntegerUpDown
-                Grid.Row="4"
-                Grid.Column="1"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                Padding="10,0,10,0"
-                Background="Transparent"
-                Foreground="{Binding ElementName=ContextSizeLabel, Path=Foreground}"
-                Value="{Binding SelectedAgent.Technical.ContextSize, UpdateSourceTrigger=PropertyChanged}"
-                />
-
+                Grid.ColumnSpan="2"
+                HorizontalAlignment="Right"
+                BorderBrush="Blue"
+                BorderThickness="1"
+                Background="#11FFFFFF"
+                >
+                <imaging:CrispImage
+                    Width="90"
+                    Height="90"
+                    Margin="0"
+                    Moniker="{Binding SelectedImageMoniker}"
+                    />
+            </Border>
 
             <Label
                 Grid.Row="5"
                 Grid.Column="0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
-                Content="Agent system prompt:"
+                Content="Prompt:"
                 />
 
             <ScrollViewer
@@ -228,7 +240,7 @@
                 Grid.ColumnSpan="2"
                 MaxHeight="350"
                 HorizontalAlignment="Stretch"
-                HorizontalScrollBarVisibility="Auto"
+                HorizontalScrollBarVisibility="Disabled"
                 VerticalScrollBarVisibility="Auto"
                 >
 
@@ -237,12 +249,44 @@
                     VerticalAlignment="Center"
                     AcceptsReturn="True"
                     TextWrapping="Wrap"
-                    Text="{Binding SelectedAgent.SystemPrompt, UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding SelectedAction.Prompt, UpdateSourceTrigger=PropertyChanged}"
+                    MinHeight="200"
                     />
 
             </ScrollViewer>
 
-            <WrapPanel
+            <ItemsControl
+                Grid.Row="7"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                HorizontalAlignment="Stretch"
+                ItemsSource="{Binding AnchorList}"
+                Margin="2,2,2,5"
+                >
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Button
+                            Content="{Binding AnchorName}"
+                            Margin="10,0,10,0"
+                            FontSize="12"
+                            FontFamily="Cascadia Code"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            Command="{Binding ElementName=ActionConfigurationWindowName, Path=DataContext.AppendAnchorCommand}"
+                            CommandParameter="{Binding}"
+                            Style="{DynamicResource TextBlockLikeButtonStyle}"
+                            />
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
+
+
+            <!--<WrapPanel
                 Grid.Row="7"
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
@@ -288,7 +332,7 @@
                     ToolTip="Replace this system prompt with default system prompt of extract natural language outlines from documents."
                     />
             
-            </WrapPanel>
+            </WrapPanel>-->
 
         </Grid>
 
