Set MaxHeight for add to context control.

--- a/FreeAIr/UI/Embedillo/EmbedilloControl.xaml
+++ b/FreeAIr/UI/Embedillo/EmbedilloControl.xaml
@@ -24,6 +24,7 @@
             FontFamily="{Binding ElementName=EmbedilloInternalName, Path=FontFamily}"
             FontSize="{Binding ElementName=EmbedilloInternalName, Path=FontSize}"
             IsEnabled="{Binding ElementName=EmbedilloInternalName, Path=ControlEnabled}"
+            MaxHeight="{Binding ElementName=EmbedilloInternalName, Path=MaxHeight}"
             Margin="0"
             HorizontalScrollBarVisibility="Auto"
             VerticalScrollBarVisibility="Auto"
