--- a/FreeAIr/UI/Windows/AgentConfigureWindow.xaml
+++ b/FreeAIr/UI/Windows/AgentConfigureWindow.xaml
@@ -7,6 +7,7 @@
     xmlns:local="clr-namespace:FreeAIr"
     xmlns:ui="clr-namespace:FreeAIr.UI"
     xmlns:et="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+    xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging" xmlns:imaging1="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
     mc:Ignorable="d" 
     d:DesignHeight="700" d:DesignWidth="1000"
     Height="700" Width="1000"
@@ -185,14 +186,41 @@
                 Content="Chosen model:"
                 />
 
-            <TextBox
+            <Grid
                 Grid.Row="3"
                 Grid.Column="1"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Center"
-                Text="{Binding SelectedAgent.Technical.ChosenModel, UpdateSourceTrigger=PropertyChanged}"
-                />
+                >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+            
+                <TextBox
+                    Grid.Column="0"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Center"
+                    Text="{Binding SelectedAgent.Technical.ChosenModel, UpdateSourceTrigger=PropertyChanged}"
+                    />
 
+                <Button
+                    Grid.Column="1"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Center"
+                    Margin="2,0,0,0"
+                    Command="{Binding ChooseModelCommand}"
+                    >
+                    <Button.Content>
+                        <imaging:CrispImage
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Moniker="{x:Static imaging1:KnownMonikers.SelectObject}"
+                            />
+                    </Button.Content>
+                </Button>
+            </Grid>
+            
             <Label
                 Grid.Row="4"
                 Grid.Column="0"
