--- a/FreeAIr/UI/Windows/ActionConfigureWindow.xaml
+++ b/FreeAIr/UI/Windows/ActionConfigureWindow.xaml
@@ -36,6 +36,8 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
@@ -63,8 +65,33 @@
                 Command="{Binding DeleteActionCommand}"
                 Style="{DynamicResource TextBlockLikeButtonStyle}"
                 />
+
+
             <Button
                 Grid.Column="2"
+                Content="↑"
+                Margin="15,0,5,0"
+                FontSize="12"
+                FontFamily="Cascadia Code"
+                VerticalAlignment="Center"
+                ToolTip="Move selected action up"
+                Command="{Binding UpActionCommand}"
+                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                />
+            <Button
+                Grid.Column="3"
+                Content="↓"
+                Margin="5,0,5,0"
+                FontSize="12"
+                FontFamily="Cascadia Code"
+                VerticalAlignment="Center"
+                ToolTip="Move selected action down"
+                Command="{Binding DownActionCommand}"
+                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                />
+
+            <Button
+                Grid.Column="4"
                 Content="Apply changes"
                 Margin="5,0,5,0"
                 FontSize="12"
